starting skeleton of stuff; validator checked

--- a/Jan_2023/jan.html
+++ b/Jan_2023/jan.html
@@ -15,6 +15,14 @@
     </head>
 
     <body>
+        <header>
+            <nav class="navigation" id="navigation">
+                <ul>
+                    <li><a href="/index.html">Main page</a></li>
+                </ul>
+            </nav>
+        </header>
+
         <div class="opening" id="opening">
             <div class="intro_slide" id="intro_slide_1">
                 <h1>Header 1</h1>
