--- a/index.html
+++ b/index.html
@@ -4,8 +4,12 @@
         <title>Overview</title>
     </head>
     <body>
-        <div class="contents" id="contents">
-            <a href="./Jan_2023/jan.html">Link to Jan</a>
-        </div>
+        <header>
+            <nav class="navigation" id="navigation">
+                <ul>
+                    <li><a href="./Jan_2023/jan.html">Link to Jan</a></li>
+                </ul>
+            </nav>
+        </header>
     </body>
 </html>
