configuring netlify with local environment

--- a/Jan_2023/jan.html
+++ b/Jan_2023/jan.html
@@ -12,6 +12,8 @@
         <link rel="stylesheet" href="./styles/page_styles.css">
         <script defer src="./programmable/click_animate.js"></script>
         <script src="./programmable/fading.js"></script>
+
+        <script async src="https://maps.googleapis.com/maps/api/js?key=YOUR_API_KEY&libraries=places&callback=initMap"></script>
     </head>
 
     <body>
@@ -62,6 +64,7 @@
             </main>
         </div>
 
+        <p id="testing"></p>
 
 
 
